--- a/setup-wizard.yml
+++ b/setup-wizard.yml
@@ -17,8 +17,8 @@ fields:
     title: Execution Client endpoint
     required: true
     description: >-
-      The consensus client (Prysm,Lighthouse, Nimbus and Teku) requires to have access to an execution client to receive the execution payload by using Engine api of the execution client. This endpoint MUST be provided for an execution client which is run on your own. IT'S NOT VALID TO USE INFURA OR ANY SERVICE PROVIDER.
-      - Goerli Geth `http://goerli-geth.dappnode:8551` - [Install link](http://my.dappnode/#/installer/goerli-geth.dnp.dappnode.eth)
+      The consensus clients (Lighthouse and Teku) require access to an execution client to receive the execution payload by using the Engine API of the execution client. This endpoint MUST be provided for an execution client which you must also run locally. YOU CANNOT CONTINUE TO USE INFURA OR ANY OR ANY OTHER REMOTE SERVICE PROVIDER.
+      - Nethermind Chiado `http://chiado.dappnode:8551` - [Install link](http://my.dappnode/#/installer/nethermind-chiado.dnp.dappnode.eth)
   - id: checkpointSyncUrl
     target:
       type: environment
@@ -26,8 +26,7 @@ fields:
       service: beacon-chain
     title: Checkpoint for fast sync
     description: >-
-      To get Teku up and running in only a few minutes, you can start Teku from a recent finalized checkpoint state rather than syncing from genesis. This is substantially **faster** and consumes **less resources** than syncing from genesis, while still providing all the same features. Be sure you are using a trusted node for the fast sync. Check [Teku docs](https://docs.teku.consensys.net/en/latest/HowTo/Get-Started/Checkpoint-Start/)
-      Get your checkpoint sync from [infura](https://infura.io/) (i.e https://XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX@eth2-beacon-chiado.infura.io)
+      To get Teku up and running in only a few minutes, you can start Teku from a recent finalized checkpoint state rather than syncing from genesis. This is substantially **faster** and consumes **less resources** than syncing from genesis, while still providing all the same features.  Be sure you are using a trusted node for the fast sync. 
     required: false
   - id: feeRecipientAddress
     target:
